2002-06-16  Steven Edwards  <Steven_Ed4153@yahoo.com>

	* lib/dinput.def (DirectInputCreateEx): Add stub.
	* lib/ntdll.def: New file.

2002-06-14  Earnie Boyd  <earnie@users.sf.net>

	* include/w32api.h: Change to version 2.0 to reflect the change
	in the license.
	* README: Renamed.
	* README.w32api: Renamed from README.  Modified license to remove
	the restriction of notifying the author based on the fact that the
	author is unreachable at the notified address.
	* Makefile.in (VERSION): Change to 2.0.

2002-06-14  Earnie Boyd  <earnie@users.sf.net>

	* include/wingdi.h (GetEnhMetaFileBits): Correct typo.
	* Makefile.in (bindist): Correct the MinGW distribution.

2002-06-13  Earnie Boyd  <earnie@users.sf.net>

	* include/winuser.h (MOUSEHOOKSTRUCT): Define structure.
	* include/wingdi.h (GetEnhMetaFileBits): Define prototype.

2002-06-13  Danny Smith  <dannysmith@users.sourceforge.net>

	* lib/test.c: #include comcat.h.

2002-06-13  John K. Hohm <jhohm@acm.org>

	* include/comcat.h: New file.

2002-06-09  Gunnar Degnbol <gdegnbol@users.sourceforge.net>

	* include/richedit.h (EM_*, TM_*, GT_*): Add new defines.
	(GETTEXTEX): Add structure definition.

2002-06-08  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/windows.h (ole2.h): #include if !__OBJC__ and
	__GNUC__ >=3 and !WIN32_LEAN_AND_MEAN.

2002-06-07  Gunnar Degnbol <gdegnbol@users.sourceforge.net>

	* include/mapi.h: Change LPTSTR to LPSTR throughout.

2002-06-05  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/winnt.h (PACE_HEADER, PACCESS_ALLOWED_ACE,
	PACCESS_DENIED_ACE): Add typedefs.

2002-06-03  Danny Smith  <dannysmith@users.sourceforge.net>

	* lib/thunk32.def (LIBRARY): Change to KERNEL32.dll.

2002-06-03 Steven Edwards  <Steven_Ed4153@yahoo.com>

	* lib/kernel32.def (ConvertToGlobalHandle): Add stub.

2002-06-01  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/windef.h: Fix typo in last change.

2002-06-01  Danny Smith  <dannysmith@users.sourceforge.net>
